--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -2,7 +2,7 @@
     /* background-image: url("../../../assets/images/footer.png");
     background-size: cover; */
     background-color: #1B1B1B;
-    height: 18rem;
+    /* height: 18rem; */
     color: #959595;
     padding: 50px 0px 0px 0px;
 }
