--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,19 +1,19 @@
 <section id="footer">
     <div class="container">
         <div class="row info">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12 col-xm-12">
                 <h5>{{'beauty.beauty' | translate}}</h5>
                 <p>{{'beauty.desc' | translate}}</p>
             </div>
-            <div class="col-md-4">
-                <h5>Menu</h5>
+            <div class="col-md-4 col-sm-12 col-xm-12">
+                <h5>{{'menu.title' | translate}}</h5>
                 <span class="clickable" (click)="navigateTo('')">{{'navbar.home' | translate}}</span>
                 <span class="clickable" (click)="navigateTo('about')">{{'navbar.about' | translate}}</span>
                 <span class="clickable" (click)="navigateTo('productList')">{{'navbar.products' | translate}}</span>
                 <span class="clickable" (click)="navigateTo('contactUs')">{{'navbar.contactus' | translate}}</span>
                 <!-- <span (click)="">Language</span> -->
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12 col-xm-12">
                 <h5>{{'footer.storeInfo' | translate}}</h5>
                 <span><i class="fas fa-map-marker-alt"></i> Cairo, Egypt</span>
                 <span><i class="fas fa-phone"></i> +02123456</span>
@@ -23,13 +23,13 @@
         </div>
         <hr>
         <div class="row icons">
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6 mb-4">
                 <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-twitter"></i>
                 <i class="fab fa-instagram"></i>
                 <i class="fab fa-pinterest-p"></i>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-12 col-md-6">
                 <img src="../../../assets/images/payments.png">
             </div>
         </div>
