--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -37,7 +37,7 @@
             id="product"
             loop="true"
             dots="true"
-            arrows="false"
+            transitionDuration="200"
           >
             <div
               *ngFor="let product of products; index as i"
