change input type text to password

--- a/src/app/components/resetpassword/resetpassword.component.html
+++ b/src/app/components/resetpassword/resetpassword.component.html
@@ -12,7 +12,7 @@
                 <div class="password col-md-12 mb-3">
                     <label for="password" class="col-sm-12">Password</label>
                     <div class="input-group">
-                        <input type="text" class="form-control rounded-0" id="password" placeholder="password" name="password"
+                        <input type="password" class="form-control rounded-0" id="password" placeholder="password" name="password"
                             formControlName="password" required>
 
                     </div>
@@ -26,7 +26,7 @@
                     <label for="confirmPassword" class="col-sm-12">Confirm Password</label>
                     <div class="col-md-12 mb-3">
                         <div class="input-group">
-                            <input type="text" class="form-control rounded-0" id="confirmPassword" placeholder="confirmPassword"
+                            <input type="password" class="form-control rounded-0" id="confirmPassword" placeholder="confirmPassword"
                                 name="confirmPassword" formControlName="confirmPassword" required>
 
                         </div>
